--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgba(4, 4, 17, 0.671);">
         
-        <a class="navbar-brand " href="a">
+        <a class="navbar-brand " href="index.html">
             <img src="img/SCAI-escudo2.png" height="60">
         </a>
   
