--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
               <li class="nav-item active">
   
-                <a class="nav-link h5 text-white" href="a">Home</a>
+                <a class="nav-link h5 text-white" href="index.html">Home</a>
   
               </li>
               <li class="nav-item">
