--- a/Descritiva.html
+++ b/Descritiva.html
@@ -76,7 +76,7 @@
         </div>
         <div class="my-3">
           <h5>Selecione o tipo de variável</h5>
-          <select class="custom-select my-2">
+          <select class="custom-select my-2" id="tipoVar">
             <option selected>Selecione...</option>
             <option>Quantitativa Discreta</option>
             <option>Quantitativa Contínua</option>
