--- a/Descritiva.html
+++ b/Descritiva.html
@@ -114,7 +114,7 @@
       </div>
     </div>
     <div class="ml-auto mr-auto text-center col-sm-4 col-md-6 col-lg-3 my-3">
-      <button type="button" class="btn btn-outline-light btn-block" data-toggle="modal" data-target="#ModalResultado" onclick="Calcular()"><h5>Calcular</h5></button>
+      <button type="button" class="btn btn-outline-light btn-block" id = "modalres" data-toggle="modal" data-target="#ModalResultado" onclick="Calcular()"><h5>Calcular</h5></button>
     </div>
 
   </section>
