--- a/Descritiva.html
+++ b/Descritiva.html
@@ -128,7 +128,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <table class="table table-hover table-dark">
+          <table class="table table-hover table-dark" id = 'tabela'>
             <thead >
               <tr>
                 <th scope="col" id="tituloTab">Variável</th>
@@ -138,7 +138,7 @@
                 <th scope="col">FAC%</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id = "corpoTabela">
               
             </tbody>
           </table>
