--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <img src="img/calculo2-1.jpeg" class="card-img-top">
           <div>
             <div class="card-body">
-              <a href="a" class="btn btn-outline-light col"><h5>Probabilidade</h5></a>
+              <a href="Probabilidade.html" class="btn btn-outline-light col"><h5>Probabilidade</h5></a>
             </div>
           </div>
         </div>
