--- a/Probabilidade.html
+++ b/Probabilidade.html
@@ -158,9 +158,9 @@
             <input type="number" class="form-control col-4" id="TamanhoAmostra"><br>
             <h5 class="my-2 text-light">Evento:</h5>
             <input type="number" class="form-control col-4" id="Evento"><br>
-            <h5 class="my-2 text-light">Sucesso:</h5>
+            <h5 class="my-2 text-light">Sucesso(%):</h5>
             <input type="number" class="form-control col-4" id="Sucesso"><br>
-            <h5 class="my-2 text-light">Fracasso:</h5>
+            <h5 class="my-2 text-light">Fracasso(%):</h5>
             <input type="number" class="form-control col-4" id="Fracasso"><br>
             <div class="ml-auto mr-auto text-center col-sm-4 col-md-4 col-lg-4 my-3">
               <button type="button" class="btn btn-outline-light btn-block" id = "calcular" onclick="CalcularBinomial()"><h5>Calcular</h5></button>
